RESOLVED FIXED 271319
[Skia] Animation on images motion mark test doesn't work on the CPU
https://bugs.webkit.org/show_bug.cgi?id=271319
Summary [Skia] Animation on images motion mark test doesn't work on the CPU
Carlos Garcia Campos
Reported 2024-03-20 09:46:36 PDT
This is always happening now since 276016@main, because we use the CPU for small canvases and this test creates canvases of 50x50.
Attachments
Carlos Garcia Campos
Comment 1 2024-03-20 11:09:49 PDT
EWS
Comment 2 2024-03-21 01:48:30 PDT
Committed 276448@main (f349cebbce3f): <https://commits.webkit.org/276448@main> Reviewed commits have been landed. Closing PR #26197 and removing active labels.
Radar WebKit Bug Importer
Comment 3 2024-03-21 01:49:14 PDT
Note You need to log in before you can comment on or make changes to this bug.