[Skia] Animation on images motion mark test doesn't work on the CPU https://bugs.webkit.org/show_bug.cgi?id=271319

Reviewed by Nikolas Zimmermann.

Use SkSurface::peekPixels() instead of SkSurface::makeImageSnapshot()
when creating a NativeImage reference.

* Source/WebCore/platform/graphics/skia/ImageBufferSkiaUnacceleratedBackend.cpp:
(WebCore::ImageBufferSkiaUnacceleratedBackend::createNativeImageReference):

Canonical link: https://commits.webkit.org/276448@main